deployments/leasebandit/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: leasebandit-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https-443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: "leasebandit-tls-secret"
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: leasebandit-entry
spec:
  hosts:
    - "dev.leasebandit.link"
  gateways:
    - leasebandit-gateway
  http:
    - route:
        - destination:
            host: frontend
            port:
              number: 80
      match:
        - uri:
            prefix: /

---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
spec:
  outboundTrafficPolicy:
    mode: ALLOW_ANY
